# libspotify

./: LICENSE  libspotify.cabal
Bindings/Spotify/: Data.hs  Error.hsc  Link.hs  Playlist.hsc  Session.hsc  Track.hsc  Version.hsc
Bindings/Spotify/Data/: AudioFormat.hsc  PlaylistCallbacks.hsc  SessionCallbacks.hsc  SessionConfig.hsc  Types.hsc
